# restaurant-project

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml
.agents/skills/designing-restaurant-saas-ux/: SKILL.md
.github/workflows/: release-gates.yml
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/api/migrations/: 20260715000000_create_tenancy.sql  20260716000000_owner_onboarding.sql  20260717000000_create_invoices.sql  20260718000000_invoice_extraction.sql  20260719000000_invoice_price_history.sql  20260720000000_create_menu_items.sql  20260721000000_create_menu_imports.sql  20260722000000_tighten_menu_item_lengths.sql  20260723000000_create_inventory.sql  20260724000000_harden_inventory_counts.sql  20260725000000_add_extraction_warnings.sql  20260726000000_create_purchase_receipts.sql  20260727000000_create_sales_days.sql  20260728000000_create_menu_item_ingredients.sql  20260729000000_create_loss_events.sql  20260730000000_strengthen_loss_event_constraints.sql  20260731000000_create_team_invitations.sql
apps/api/src/: auth.rs  costing.rs  extraction.rs  inventory.rs  invoices.rs  losses.rs  main.rs  menu.rs  menu_imports.rs  purchases.rs  release_tests.rs  sales.rs  settings.rs  storage.rs  today.rs  uploads.rs  weekly_brief.rs  workos.rs
apps/web/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: authenticated.smoke.spec.ts  release.smoke.spec.ts
apps/web/src/: App.tsx  SalesWorkspace.tsx  SettingsWorkspace.tsx  TodayWorkspace.tsx  WeeklyBriefWorkspace.tsx  main.tsx  styles.css
scripts/: release-gate.sh
