[package]
name = "restaurant-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
aws-credential-types = "=1.2.3"
aws-sdk-s3 = "=1.96.0"
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
fastrand = "2.3"
httpdate = "1.0"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["bigdecimal", "chrono", "macros", "migrate", "postgres", "runtime-tokio", "tls-rustls-ring", "uuid"] }
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v7"] }
